
Icons are stored in epplets/icons/ and are installed into
$EROOT/epplet_icons/.  All miscellaneous data files (including images) are
stored in epplets/<epplet name>-data/ and are installed into
$EROOT/epplet_data/<epplet name>/.  Also note that, if you're going to use the
same old aircut3.ttf and bg.png in your help section, add your epplet's name
to NEED_BG and NEED_FONT in epplets/Makefile.am.  Do NOT commit duplicates of
those two files.

-------------------------------------------------------------------------------

Thu Nov 25 20:48:51 GMT 1999
(gilbertt)

Oops. Fixed a naughty segfault with my shoddy string handling routines.

-------------------------------------------------------------------------------

Fri Nov 25 19:17:05 GMT 1999
(gilbertt)

E-UrlWatch

Added support for URL grabbers such as that found in TE/Epic. In the example
of TE, urls are stripped from irc convo, and dumped into ~/.te/.urls
If told to via the config (as it will by default), E-UrlWatch will watch
that file, and will strip out new urls and allow you to view them at the
touch of a button. (Or automatically if you specify). It'll also perform a
configurable command (I use it to play a sound) when a new URL appears.

Other misc cleanups have taken place, and I have very carefully hidden a
couple of juicy bugs. Find them for me, and you win a prize ;)

-------------------------------------------------------------------------------

Sat Nov 26 00:48:19 GMT 1999
(gilbertt)

Added a groovy new noise for E-UrlWatch to make when a new URL is found.
Coolness. Now supports TE ootb.

-------------------------------------------------------------------------------

Sat Nov 27 14:39:57 EST 1999
(StriderZ)

You can paste to textboxes now....whoopty d00.

-------------------------------------------------------------------------------

Sat Nov 27 16:18:55 EST 1999
(StriderZ)

Textbox bugfixes (I hope), thanks for bitching, guys *ducks*
