@@ -908,3 +908,10 @@ Sat Nov 27 16:18:55 EST 1999
 
 Textbox bugfixes (I hope), thanks for bitching, guys *ducks*
 
+-------------------------------------------------------------------------------
+
+Sun Nov 28 01:12:11 GMT 1999
+(gilbertt)
+
+Added some help dox for E-UrlWatch.
+
